--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <p>Tekijä: Arttu Tuhkanen</p>
     <p><a href="mailto:arttu.tuhkanen@edu.sakky.fi">arttu.tuhkanen@edu.sakky.fi</a></p>
-
+    <p>Joko se gitti toimii????</p>
 </footer>
 
 </html>
