Lisättin terveys php

--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="#">Kotisivuni</a>
+            <a class="navbar-brand" href="index.html">
+                <img src="kuva1.jpg" alt="Avatar Logo" class="rounded-pill" style="width:80px;">
+            </a>
 
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Linkki 1</a>
+                    <a class="nav-link" href="terveys.php">Terveys</a>
                 </li>
 
                 <li class="nav-item">
@@ -57,7 +59,8 @@
         <p>Harrastuksiini kuuluu tietokonepelaaminen, kalastus, kahvi ja dartsi.</p>
         <p>Koulutuksia on pari katkennutta ammattikoulua ICT-asentajaksi ja metsäkoneenkuljettajaksi, kortti koulutuksia on hätäensiavusta. Työ kokemusta ei juurikaan ole. Olen kuienkin ollut työpajalla muutaman vuoden ajan,
              ennen kouluun pääsyä. Olen myös kotoisin maatilalta, joten jotain on sielläkin pakko ollut tehdä.</p>
-        <p>Minulla ei ole kokemusta koodaamisesta muualta kuin koulusta, joten kaikki tekemäni ohjelmat tai sivustot on tehty koulu tehtävien merkeissä.</p>
+        <p>Minulla ei ole kokemusta koodaamisesta muualta kuin koulusta, joten kaikki tekemäni ohjelmat tai sivustot on tehty koulu tehtävien merkeissä.
+            Osaan kirjoittaa koodia seuraavilla kielillä: C#, HTML ja PHP.</p>
         <p>Osaan kasata tietokoneita, koska olen harrastanut niitä jo yli vuosikymmenen.</p>
     
     </div>
@@ -68,7 +71,7 @@
 
     <p>Tekijä: Arttu Tuhkanen</p>
     <p><a href="mailto:arttu.tuhkanen@edu.sakky.fi">arttu.tuhkanen@edu.sakky.fi</a></p>
-    <p>Joko se gitti toimii????</p>
+
 </footer>
 
 </html>
