--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 </body>
 
-<footer class="container-fluid text-center fixed-bottom">
+<footer class="container-fluid text-center">
 
     <p>Tekijä: Arttu Tuhkanen</p>
     <p><a href="mailto:arttu.tuhkanen@edu.sakky.fi">arttu.tuhkanen@edu.sakky.fi</a></p>
