vaihettiin navbarin asettelua

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         <div class="container-fluid">
 
             <a class="navbar-brand" href="index.html">
-                <img src="kuva1.jpg" alt="Avatar Logo" class="rounded-pill" style="width:80px;">
+                <img src="saukko.jpg" alt="Avatar Logo" class="rounded-pill" style="width:80px;">
             </a>
 
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="terveys.php">Terveys</a>
+                    <a class="nav-link" href="index.html">Koti</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Linkki 2</a>
+                    <a class="nav-link" href="terveys.php">Terveys</a>
                 </li>
 
                 <li class="nav-item">
