lisättiin sivu ja korjattiin bmi laskuria

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Linkki 3</a>
+                    <a class="nav-link" href="liikunta_kirja.php">Liikunta päiväkirja</a>
                 </li>
 
                 <li class="nav-item">
@@ -61,7 +61,7 @@
              ennen kouluun pääsyä. Olen myös kotoisin maatilalta, joten jotain on sielläkin pakko ollut tehdä.</p>
         <p>Minulla ei ole kokemusta koodaamisesta muualta kuin koulusta, joten kaikki tekemäni ohjelmat tai sivustot on tehty koulu tehtävien merkeissä.
             Osaan kirjoittaa koodia seuraavilla kielillä: C#, HTML ja PHP.</p>
-        <p>Osaan kasata tietokoneita, koska olen harrastanut niitä jo yli vuosikymmenen.</p>
+        <p>Osaan kasata tietokoneita, koska olen harrastanut niitä jo toista vuosikymmentä.</p>
     
     </div>
 
