--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Linkki 4</a>
+                    <a class="nav-link" href="yhteys.php">Ota yhteyttä</a>
                 </li>
 
             </ul>
